[tool.poetry]
name = "alike"
version = "0.1.0"
description = "Loose object comparison for python"
authors = ["Davis Kirkendall <davis.e.kirkendall@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.1"
isort = "^5.7.0"
flake8 = "^3.8.4"
mypy = "^0.790"
coverage = "^5.3.1"
click = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length=88
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true

[tool.pytest.ini_options]
junit_family="xunit2"
addopts = "--doctest-modules"

[tool.coverage.run]
branch = true
source = ["src"]


[tool.coverage.report]
show_missing = true
